--- a/data/project.json
+++ b/data/project.json
@@ -1,21 +1,39 @@
 {
-  "users": [],
   "publish": {
-    "publishPagesApp": false,
-    "publishSHA": "",
-    "publishISODate": ""
+    "publish_pages_app": true,
+    "publish_sha": "",
+    "publish_iso_date": ""
   },
+  "users": [
+    {
+      "login_name": "tanyaclement",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1213771?v=4",
+      "admin": false
+    }
+  ],
   "project": {
-    "title": "Zora Neale Hurston’s Works Progress Administration Recordings",
-    "description": "",
-    "language": "",
-    "slug": "",
-    "authors": "",
-    "mediaPlayer": "universal",
-    "autoPopulateHomePage": "true",
-    "additionalUsers": [],
-    "": {},
-    "createdAt": "",
-    "updatedAt": ""
+    "github_org": "Grace-137",
+    "is_private": false,
+    "title": "Encounter with the Black diaspora in Greece ",
+    "description": "In this project, I put together materials from the archive of the collective community project the AfroGreeks, in order to articulate the discourse on Blackness and identity currently emerging in Europe, particularly in Greece. The goal is to raise awareness about the critical social issues faced by Black communities outside the U.S., highlighting the specific challenges they confront; their contributions to the evolving scholarship of Black Studies; and the ways digital humanities methodologies can illuminate these narratives and advance the field.",
+    "language": "en",
+    "slug": "AfroGreeks",
+    "creator": "Grace-137",
+    "authors": "Grace Chimela Eze Nwoke ",
+    "media_player": "avannotate",
+    "auto_populate_home_page": true,
+    "additional_users": [
+      {
+        "login_name": "tanyaclement",
+        "avatar_url": "https://avatars.githubusercontent.com/u/1213771?v=4",
+        "admin": false
+      }
+    ],
+    "tags": {
+      "tagGroups": [],
+      "tags": []
+    },
+    "created_at": "2025-12-17T04:58:03.865Z",
+    "updated_at": "2025-12-17T04:58:03.865Z"
   }
 }
