--- a/data/project.json
+++ b/data/project.json
@@ -6,9 +6,15 @@
   },
   "users": [
     {
+      "login_name": "Grace-137",
+      "avatar_url": "https://avatars.githubusercontent.com/u/240009876?v=4",
+      "admin": true
+    },
+    {
       "login_name": "tanyaclement",
       "avatar_url": "https://avatars.githubusercontent.com/u/1213771?v=4",
-      "admin": false
+      "admin": false,
+      "not_accepted": true
     }
   ],
   "project": {
@@ -34,6 +40,27 @@
       "tags": []
     },
     "created_at": "2025-12-17T04:58:03.865Z",
-    "updated_at": "2025-12-17T04:58:03.865Z"
-  }
+    "updated_at": "2025-12-17T04:58:03.865Z",
+    "generate_pages_site": true
+  },
+  "annotations": {},
+  "events": {},
+  "eventOrder": [],
+  "pages": {
+    "113f233a-eb03-4442-be94-21932982545f": {
+      "content": [],
+      "created_at": "2025-12-17T04:58:03.901Z",
+      "created_by": "Grace-137",
+      "title": "Encounter with the Black diaspora in Greece ",
+      "updated_at": "2025-12-17T04:58:03.901Z",
+      "updated_by": "Grace-137",
+      "autogenerate": {
+        "enabled": true,
+        "type": "home"
+      }
+    }
+  },
+  "pageOrder": [
+    "113f233a-eb03-4442-be94-21932982545f"
+  ]
 }
